[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Items/WeaponA.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Playerbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 2 )

[node name="ActionTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="WeaponTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="Cooldown" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0
one_shot = true

[node name="StateLabel" type="Label" parent="."]
visible = false
margin_left = -16.0
margin_top = -32.0
margin_right = 24.0
margin_bottom = -18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemLabel" type="Label" parent="."]
margin_left = -16.0
margin_top = -56.0
margin_right = 24.0
margin_bottom = -42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeLabel" type="Label" parent="."]
margin_left = -16.0
margin_top = -80.0
margin_right = 24.0
margin_bottom = -66.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponA" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 48, 0 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, -19 )
enabled = true
cast_to = Vector2( 0, -1 )
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_ActionTimer_timeout"]
[connection signal="timeout" from="WeaponTimer" to="." method="_on_WeaponTimer_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]

[editable path="WeaponA"]
